=========================================================================
CHANGE LOG
=========================================================================

2011-06-08 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* "fix" for colored sticks problem

	* fixed File > Save Molecule using object's state

	* fog/shading in shaders

2011-05-18 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* bugfix for drawing ribbons, drastically increases their rendering (3x+)

2011-05-18 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed a bug where group names were clipped

2011-05-18 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed state bug in distances for (all)

	* fixed ray trace bug when not using Python

	* fixed nucleic acid residue naming (Thanks to Thomas Holder)

2011-05-12 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* more robust space group/pt group reading from maps

2011-05-02 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed state bug in distances for (all)

	* fixed ray trace bug when not using Python

	* fixed nucleic acid residue naming (Thanks to Thomas Holder)

2011-05-02 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed shader bug

	* v1.4.1 release

2011-04-20 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* finished the state counter

	* all measures now work inter-distance, and
	  honor object states

	* selecting/picking now works as we'd expect, with 
	  respect to states

	* improved shaders; added fog, fixed rendering issues

	* bug fix for possible crash

2011-04-20 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* freezing colors the states blue

	* added out of bounds checks for showing states; those
	  beyond are shown as "--"

2011-04-20 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* state_counter_mode

	* fixed bg_gradient coloring

	* added small dictionary for xray space groups

	* get_names and safe names 

2011-04-01 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* transparent ribbons
