@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2011-06-09 Jason Vertrees <Jason.Vertrees@schrodinger.com>
+
+	* fixed volume shader; esp for Ubuntu
+
 2011-06-08 Jason Vertrees <Jason.Vertrees@schrodinger.com>
 
 	* "fix" for colored sticks problem
